Added copper_golem, finished streamlining code.